--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 .hex-colors{
     height: 80%;
-    width: 60%;
+    width: 35%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -20,16 +20,13 @@
 }
 
 .hex-colors > h1, h2 {
-    animation: wrbalternate 7s infinite alternate;
+    animation: bwalternate 4s infinite alternate;
     font-size: 50px;
 }
 
-@keyframes wrbalternate{
+@keyframes bwalternate{
     0%{
         color: white;
-    }
-    50%{
-        color: red;
     }
     100%{
         color: black;
